--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@dithercat/servitor",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "simple multiuser LLM chatbot framework",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "https://github.com/dithercat/servitor",
   "author": "dither",
   "license": "BSD-2-Clause",
