--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "cheminfo-types": "^1.7.2",
+    "ml-distance": "^4.0.1",
     "node-fetch": "^3.3.1",
     "sequelize": "^6.32.0",
     "string-format": "^2.0.0"
