--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheminfo-types": "^1.7.2",
     "ml-distance": "^4.0.1",
     "node-fetch": "^3.3.1",
+    "openai": "^3.2.1",
     "sequelize": "^6.32.0",
     "string-format": "^2.0.0"
   }
